update project page

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div class="nav-content">
             <div class="logo logo-font">Claire Zhao</div>
             <ul class="nav-links">
-                <li><a href="#about" class="button-text">ABOUT</a></li>
-                <li><a href="#projects" class="button-text">PROJECTS</a></li>
-                <li><a href="#contact" class="button-text">CONTACT</a></li>
+                <li><a href="about.html" class="button-text">ABOUT</a></li>
+                <li><a href="projects.html" class="button-text">PROJECTS</a></li>
+                <li><a href="contact.html" class="button-text">CONTACT</a></li>
             </ul>
         </div>
     </nav>
@@ -33,7 +33,7 @@
                 <h1 class="name">Claire Zhao</h1>
                 <p class="main-p">
                     Designer & Developer telling stories through multimedia,<br> 
-                    and bringing playfulness to your experiences.
+                    and create playful experiences.
                 </p>
                 <div class="cta-buttons">
                     <a href="#" class="btn btn-outline button-text">
@@ -41,7 +41,7 @@
                         <img src="assets/arrow_blue.svg" alt="" class="arrow">
                     </a>
                     <a href="#" class="btn btn-solid button-text">
-                        FEATURED PROJECTS <img src="assets/arrow_white.svg" alt="" class="arrow">
+                        MY PROJECTS <img src="assets/arrow_white.svg" alt="" class="arrow">
                     </a>
                 </div>
             </div>
